# docksmith-cc

./: .gitignore  README.md
docksmith/: CMakeLists.txt
docksmith/cmd/: main.cpp
docksmith/engine/: build.cpp  cache.cpp  commands.hpp  isolation.cpp  isolation.hpp  layers.cpp  parser.cpp  parser.hpp  runtime.cpp
docksmith/store/: cache.cpp  cache.hpp  images.cpp  images.hpp  layers.cpp  layers.hpp  types.hpp
docksmith/tests/: integration_phases.cpp
docksmith/util/: fs.cpp  fs.hpp  hash.cpp  hash.hpp  tar.cpp  tar.hpp
sample-app/: Docksmithfile  README.md  app.txt
